WM_ACTIVATEAPP will now rollup comboboxes (when browser is minimized with dropdown down) Bug 79720, r=kmcclusk sr=hyatt